# servingFox

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: config.h  main.cpp
src/pool/: pool.cpp  pool.hpp
src/request/: request.cpp  request.hpp
src/response/: response.cpp  response.hpp
src/server/: server.cpp  server.hpp
utils/: crashtrace.c  crashtrace.h  logger.c  logger.h  trie.hpp
